tests/javacresults/op_rhythm.txt
Intermediate.java:1: error: class, interface, or enum expected
Fatal error: exception Failure("Cannot apply < > <= >=  op to types rhythm + rhythm")
^
1 error
